--- a/package.json
+++ b/package.json
@@ -25,5 +25,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "html-webpack-plugin": "^5.6.3",
+    "postcss": "^8.4.21",
+    "postcss-import": "^16.1.1",
+    "tailwindcss": "^3.3.0"
   }
-} 
+}
