--- a/backend/package.json
+++ b/backend/package.json
@@ -1,15 +1,22 @@
 {
-  "name": "aquaculture-backend",
+  "name": "acf-ai-assistant-backend",
   "version": "1.0.0",
+  "description": "Backend API for ACF AI Assistant",
   "main": "server.js",
-  "type": "module",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "node-fetch": "^3.3.2",
-    "socket.io": "^4.7.5"
-  }
+    "cors": "^2.8.5",
+    "axios": "^1.6.0",
+    "dotenv": "^16.3.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "keywords": ["ai", "assistant", "portfolio", "chat"],
+  "author": "Cael Findley",
+  "license": "MIT"
 }
