--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@react-three/drei": "^10.6.1",
+    "@react-three/fiber": "^9.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "three": "^0.178.0"
   },
   "browserslist": {
     "production": [
