--- a/package.json
+++ b/package.json
@@ -10,12 +10,9 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@react-three/drei": "^9.122.0",
-    "@react-three/fiber": "^8.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "three": "^0.159.0"
+    "react-scripts": "5.0.1"
   },
   "browserslist": {
     "production": [
