Fix CI workflow: set working directory to Portfolio subdirectory

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,9 +18,12 @@ jobs:
         with:
           node-version: 18
           cache: 'npm'
+          cache-dependency-path: './Portfolio/package-lock.json'
 
       - name: Install dependencies
+        working-directory: ./Portfolio
         run: npm ci
 
       - name: Build
+        working-directory: ./Portfolio
         run: npm run build
